--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="cv/Images/jason-profile-circle.png" alt="Profile picture of Jason Lewis digital"></td>
+            <td><img src="https://github.com/jlewdig/cv/blob/main/Images/jason-profile-circle.png" alt="Profile picture of Jason Lewis digital"></td>
             <td><h1>Jason Lewis Digital</h1><p><strong>Digital Marketing Manager</strong></p></td>
         </tr>
     </table>
